# shop_mts

./: .gitignore  pyproject.toml
base/: seleniumbase.py
pom/: homepage.py
tests/tests_ui/: conftest.py  test_make_order.py
