[tool.poetry]
name = "shop_mts"
version = "0.1.0"
description = ""
authors = ["Vladislav.H <vkhrabrov94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"
requests = "^2.27.1"
selenium = "^4.1.5"
webdriver-manager = "^3.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
